Fix to input spacing

--- a/seasonal-ng/src/app/components/product-search-criteria/product-search-criteria.component.scss
+++ b/seasonal-ng/src/app/components/product-search-criteria/product-search-criteria.component.scss
@@ -3,15 +3,16 @@
     margin: 0.7rem 0.7rem 0 0.7rem;
     display: flex;
     flex-direction: column;
+    column-gap: 1.4rem;;
+}
+
+.mat-form-field {
+    flex-grow: 1;
 }
 
 @media (min-width: 768px) {
     .container {
         flex-direction: row;
+        margin-right: 1.4rem;
     }
-}
-
-.mat-form-field {
-    flex-grow: 1;
-    margin-right: 1.4rem;
 }
